--- a/backend/NodeServer/package.json
+++ b/backend/NodeServer/package.json
@@ -2,6 +2,12 @@
   "dependencies": {
     "@truffle/hdwallet-provider": "^1.2.4",
     "body-parser": "^1.19.0",
-    "web3": "^1.3.6"
+    "dotenv": "^10.0.0",
+    "helmet": "^4.6.0",
+    "mongoose": "^5.12.14",
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.7",
+    "web3": "^1.3.6",
+    "yarn": "^1.22.10"
   }
 }
