--- a/backend/NodeServer/package.json
+++ b/backend/NodeServer/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@truffle/hdwallet-provider": "^1.2.4",
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "dotenv": "^10.0.0",
     "helmet": "^4.6.0",
